--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Zsanett\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\Vir\u00e1g\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
