--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/OnlineAntikvarium_nem_repo.jar
+dist.jar=${dist.dir}/OnlineAntikvarium.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.json-simple-1.1.1.jar=C:\\Users\\Zsanett\\Downloads\\json-simple-1.1.1.jar
